# IntAPT

./: Info.cpp  Info.h  Makefile  README  README.md  bedio.cpp  bedio.h  merge_instances.cpp  options.cpp  options.h  process_junc.cpp  rangeset.cpp  readinstance.cpp  run_IntAPT_paired_end.sh  run_IntAPT_single_end.sh  utility.cpp  utility.h  utility_backup1208.cpp
boost/threadpool/: .task_adaptors.hpp.swp
src/: CMakeLists.txt  Info.cpp  Info.h  IntAPT.cpp  align.h  basic_math.h  changelog.txt  check_chr  check_chr.cpp  commontype.h  filter_allbound_isp  filter_allbound_isp.cpp  filter_bam.cpp  filter_bam.h  filter_bed  filter_bed.cpp  filter_bed_test  filter_bed_test.cpp  filter_boundbed  filter_boundbed.cpp  filter_instances  filter_instances.cpp  instance_cpp  instance_cpp1  merge_instances  merge_instances.cpp  merge_instances.h  mergerange.cpp  mergerange.h  options.cpp  options.h  process_junc  process_junc.cpp  process_junc.h  rangeset.h  readinstance.cpp  readinstance.h  sampling.h  utility.cpp  utility.cpp_backup  (+1 more)
tools/: processsamS  samtools
